--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,38 +3,37 @@
     "target": "ES2017",
     "lib": [
       "dom",
-      "dom.iterable",
       "esnext"
     ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "isolatedModules": true,
+    "esModuleInterop": true,
     "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": [
         "./*"
       ]
     },
-    "forceConsistentCasingInFileNames": true
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "module": "esnext",
+    "resolveJsonModule": true
   },
   "include": [
-    "next-env.d.ts",
+    "**/*.js",
+    "**/*.jsx",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "pages/admin/[slug].js", "pages/index.js", "pages/enter.js", "pages/_app.js", "lib/firebase.js"  ],
+  ],
   "exclude": [
     "node_modules"
   ]
