--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.5",
     "firebase": "^8.10.1",
     "lodash.debounce": "^4.0.8",
     "lodash.kebabcase": "^4.1.1",
@@ -26,6 +25,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.3.1",
     "postcss": "^8.2.6",
     "postcss-scss": "^4.0.9",
     "tailwindcss": "^3.4.17",
